# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.8
#

2005-05-28 12:51:48 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-96

    Summary:
      catalog, fix profile and bench script
    Revision:
      itools--main--0.8--patch-96


    modified files:
     Changelog catalog/prof.py


2005-05-25 16:39:02 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-95

    Summary:
      get ready to release 0.8.1
    Revision:
      itools--main--0.8--patch-95


    modified files:
     CHANGES.txt Changelog setup.py


2005-05-24 16:53:59 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-94

    Summary:
      resources, import get_mtime for http resources (#45)
    Revision:
      itools--main--0.8--patch-94


    modified files:
     Changelog resources/base.py resources/http.py


2005-05-23 09:45:18 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-93

    Summary:
      handlers, fix csv parser for one column csv files
    Revision:
      itools--main--0.8--patch-93


    modified files:
     Changelog handlers/CSV.py


2005-05-18 14:30:11 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-92

    Summary:
      html, fix parser when encoding is defined late
    Revision:
      itools--main--0.8--patch-92

    Now the encoding is detected by "html.parser", this allows to parse
    documents when an encoding different than UTF-8 is defined late, for
    example:
    
      <title>some accentuated character here in latin 1</title>
      <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
    
    Here an accentuated character appears before the encoding declaration.
    Now we can deal with these cases.

    modified files:
     Changelog html/HTML.py html/parser.py


2005-05-10 14:39:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-91

    Summary:
      html, make a more robust parser
    Revision:
      itools--main--0.8--patch-91

    Deal with:
    